2006-02-04  Peter Harvey  <peter.a.harvey@gmail.com>

	* lib/egg/egg-editable-toolbar.c
	* lib/egg/egg-toolbar-editor.c
	* lib/egg/egg-toolbars-model.c
	* lib/egg/egg-toolbars-model.h
	* src/bookmarks/ephy-bookmark-factory-action.c
	* src/bookmarks/ephy-topic-factory-action.c
	* src/ephy-toolbars-model.c
	* src/epiphany.defs
	
	Improve the system for testing whether an item has already
	been used on the toolbar.

2006-02-04  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmark-properties.c
	* src/bookmarks/ephy-bookmarks-ui.c
	* src/bookmarks/ephy-bookmarks-ui.h
	* src/ephy-history-window.c
	* src/popup-commands.c
	* src/window-commands.c

	Restore transient status to the properties dialog when
	creating a new bookmark. Leave the topics entry sensitive, 
	and store the expanded state of the list. Make the similar
	button a toggle button. Removed unused function to add topic.

2006-02-04  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmarks.c
	
	Improve code quality of function to determine similar bookmarks.

2006-02-03  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-main.c: (main):

	Free the option context on error too, and don't duplicate
	the private-instance option.

2006-02-03  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyPromptService.cpp:

	Don't make the nonblocking alert modal!

2006-02-03  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/EphyPromptService.h:
	* embed/mozilla/EphyPromptService.cpp: (ShowNonBlockingAlert):
	* embed/mozilla/AutoJSContextStack.cpp:

	Fix compilation against trunk + some typos.

2006-02-03  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-main.c:

	Fix non-debug builds.

2006-02-03  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-dbus.c: (ephy_dbus_connect_to_session_bus),
	(ephy_dbus_get_property), (ephy_dbus_set_property),
	(ephy_dbus_class_init), (_ephy_dbus_startup):
	* src/ephy-dbus.h:
	* src/ephy-main.c: (main):
