@@ -1,5 +1,13 @@
 2006-02-04  Peter Harvey  <peter.a.harvey@gmail.com>
 
+	* lib/ephy-state.h
+	* lib/ephy-state.c
+	* src/ephy-shell.c
+	
+	Forgotten files from previous two commits.
+	
+2006-02-04  Peter Harvey  <peter.a.harvey@gmail.com>
+
 	* lib/egg/egg-editable-toolbar.c
 	* lib/egg/egg-toolbar-editor.c
 	* lib/egg/egg-toolbars-model.c
